deployment-hibikifront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
      - name: front-app
        image: alejandroalagon33/sanvalero:hibikifrontV50
        ports:
        - containerPort: 80
