deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  labels:
    app: front-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
      - name: front-app
        image: alejandroalagon33/tfg:hibikifront-hibiki-complete-v1.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        # Variables de entorno para la aplicación
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: env-volume
          mountPath: /usr/share/nginx/html/env.js
          subPath: env.js
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
      volumes:
      - name: config-volume
        configMap:
          name: hibiki-frontend-config
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: env-volume
        configMap:
          name: hibiki-frontend-config
          items:
          - key: env.js
            path: env.js
---
apiVersion: v1
kind: Service
metadata:
  name: hibiki-frontend-service
  annotations:
    # Configuración SSL para el frontend
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:arn:aws:acm:us-east-1:327059862036:certificate/73104d88-ea41-4e71-8653-d0dfed8786d1
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: ELBSecurityPolicy-TLS-1-2-2017-01
spec:
  selector:
    app: front-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
